# wyu-jwxt

./: .gitignore  CLAUDE.md  LICENSE  README.md  app.py  pyproject.toml  requirements.txt  run_edge_tests.py  run_tests.py
api/: app.py  requirements.txt
docs/: API.md  USAGE.md
docs/superpowers/plans/: 2026-07-11-code-review-fixes.md  2026-07-11-wyu-api-plan.md
docs/superpowers/specs/: 2026-07-11-wyu-api-design.md
src/wyu_jwxt/: __init__.py  captcha.py  client.py  config.py  crypto.py  exams.py  exceptions.py  grades.py  models.py  schedule.py  student_info.py
